--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
-    "express-ejs-layouts": "^2.3.0"
+    "express-ejs-layouts": "^2.3.0",
+    "mongoose": "^4.11.0"
   }
 }
